[tool.poetry]
name = "analytiq-gis-backend"
version = "0.1.0"
description = "LLM based geo-spatial query execution engine."
authors = ["B4S1C-Coder <saksham2005mittal@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.12.14"
aiosignal = "1.4.0"
annotated-types = "0.7.0"
anyio = "4.9.0"
attrs = "25.3.0"
av = "15.0.0"
certifi = "2025.7.9"
charset-normalizer = "3.4.2"
click = "8.2.1"
coloredlogs = "15.0.1"
ctranslate2 = "4.6.0"
diskcache = "5.6.3"
edge-tts = "7.0.2"
fastapi = "0.116.1"
faster-whisper = "1.1.1"
filelock = "3.18.0"
flatbuffers = "25.2.10"
frozenlist = "1.7.0"
fsspec = "2025.5.1"
h11 = "0.16.0"
hf-xet = "1.1.5"
huggingface-hub = "0.33.4"
humanfriendly = "10.0"
idna = "3.10"
jinja2 = "3.1.6"
llama-cpp-python = "0.3.9"
markupsafe = "3.0.2"
mpmath = "1.3.0"
multidict = "6.6.3"
numpy = "2.2.6"
onnxruntime = "1.22.1"
packaging = "25.0"
propcache = "0.3.2"
protobuf = "6.31.1"
pydantic = "2.11.7"
pydantic-core = "2.33.2"
python-multipart = "0.0.20"
pyyaml = "6.0.2"
requests = "2.32.4"
setuptools = "80.9.0"
sniffio = "1.3.1"
srt = "3.5.3"
starlette = "0.47.1"
sympy = "1.14.0"
tabulate = "0.9.0"
tokenizers = "0.21.2"
tqdm = "4.67.1"
typing-inspection = "0.4.1"
typing-extensions = "4.13.2"
urllib3 = "2.5.0"
uvicorn = "0.35.0"
yarl = "1.20.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
